For the latest news, visit the SparForte web site.

Objective: Bug fixes following 2.5 and reducing technical debt.  Foundations of AI and data security.

CHANGES SINCE 2.5

1. New: --session option to store history and local profiles under alternate names.

2. New: System.Session_Name to read the name from --session.

3. New: pragma prompt_idle_script and prompt_idle_speed.

4. New: New examples rock.sp, user_input.sp, primes_asc.sp.

5. New: case in is now case procedure.

6. Fix: GCC-style error messages no longer contains coloured text with --colour/--color.

7. Fix: non-limited volatiles, which cannot be used in expressions, no longer have an error for not being declared limited.

8. Fix: usable parameters in null subprograms no longer report an error if they are not used or are not referenced.

9. Refactor: end-of-line CR/LF definitions are now in the os_binding files.

10. Fix: --gcc-errors no longer hides error messages at an interactive prompt.

11. Fix: with APQ, Makeincl no longer aborts a make clean because this generated file was removed in a previous make clean.

12. Refactor: error reporting functions have been redesigned for better security and support for European characters.  Also, highlighted keywords in source lines in error messages.

13. Fix: libc group_member() missing from some Ubuntu Linux where __USE_GNU is not set.  Occurred on a recent Ubuntu update.  Added workaround based on BSD hack.

14. Fix: if an error occurs while parsing a pragma template, do not enable templates and get an internal error when rendering the HTTP header.

15. Fix: template error messages are now consistently written to standard error as a single line for logging purposes.

16. Fix: extended ASCII characters render correctly when displaying the source code line in an error message.

17. New: TOML/INI template support.
