@@ -97,7 +97,7 @@ environment.</p>
   <b>pragma</b> suppress( all_todos_on_release )
   <b>pragma</b> suppress( low_priority_todos_for_release )
   <b>pragma</b> suppress( no_empty_command_substitutions )
-  <b>pragma</b> template( css|html|js|json|text|wml|xml|yaml [, path] )
+  <b>pragma</b> template( css|html|js|json|text|toml|wml|xml|yaml [, path] )
   <b>pragma</b> todo( to, story, measure, units, priority, units [, ticket] )
   <b>pragma</b> test( condition [, "description" )
   <b>pragma</b> test_report( text|xml [, "filepath"] )
@@ -105,7 +105,7 @@ environment.</p>
   <b>pragma</b> unchecked_import( shell | cgi | local_memcache | memcache | session, var )
   <b>pragma</b> unchecked_volatile( var [,ttl] )
   <b>pragma</b> uninspect( var )
-  <b>pragma</b> unrestricted_template( css|html|js|json|text|wml|xml|yaml [, path] )
+  <b>pragma</b> unrestricted_template( css|html|js|json|text|toml|wml|xml|yaml [, path] )
   <b>pragma</b> volatile( var [,ttl] )
 </pre>
                 <br>
